--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=literalura-desafio
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/literalura
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
+
+#Para poder ver todas las operaciones realizadas en la base de datos.
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
+
+#server.port=8081
+
+
+literalura
